@@ -1,4 +1,7 @@
 2011-09-21 gabriel.oliveira
+* Improve "Change State" dialog, both layout and behaviour
+
+2011-09-21 gabriel.oliveira
 * Add separation between current selected language and logged in user
 
 2011-09-21 gabriel.oliveira
